# a-lm

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  a_lm.ipynb  pyproject.toml
.github/workflows/: ci.yml
configs/: corpus.yaml  corpus_colab.yaml  corpus_ec2.yaml  corpus_m2.yaml  nano.yaml  pico.yaml  pico_sft.yaml  sft.yaml  sft_2048.yaml  sft_2048_40k.yaml  sft_persona.yaml  train.yaml  train_colab.yaml  train_m2.yaml
docs/: colab.md  sft_eval_prompts.md
scripts/: chat_cli.py  eval_chat.py  filter_sft.py  generate_rlvr_math.py  inspect_sft_pack.py  pack_dataset.py  pack_sft.py  prepare_corpus.py  prepare_persona_sft.py  prepare_sft.py  sample_text.py  train_pretrain.py  train_rlvr.py  train_sft.py  train_tokenizer.py
src/a-lm/model/: __init__.py  attention.py  dual_ffn.py
src/a-lm/tokenizers/: __init__.py  tokenizer.py  unigram_trainer.py
src/a-lm/utils/: device.py
src/a_lm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/alm/data/: config.py  dataset.py  pack.py  prepare.py  sft_dataset.py  sft_pack.py
src/alm/model/: __init__.py  alibi.py  attention.py  config.py  dual_ffn.py  rmsnorm.py  rope.py  transformer.py
src/alm/rlvr/: __init__.py  logprobs.py  math_tasks.py  reward.py
src/alm/tokenizers/: __init__.py  bpe_trainer.py  hf_tokenizer.py  hf_trainer.py  normalizer.py  vocab.py  (+2 more)
src/amlm/: __init__.py
tests/: test_device.py  test_package.py
tests/data/: test_dataset.py  test_pack.py  test_prepare.py  test_sft_pack.py
tests/model/: test_alibi.py  test_attention.py  test_dual_ffn.py  test_rmsnorm.py  test_rope.py  test_swiglu.py  test_transformer.py
tests/rlvr/: test_reward.py
tests/tokenizers/: test_bpe_trainer.py  test_hf_tokenizer.py  test_normalizer.py  test_tokenizer.py  test_unigram_trainer.py
tests/train/: test_sft_smoke.py  test_train_smoke.py
(+15 files in other folders)
